# daml

./: WORKSPACE  azure-pipelines.yml  deps.bzl
bazel_tools/: nixpkgs-hermetic-cc-toolchain.patch  scala.bzl
ci/da-ghc-lib/: compile.yml
compatibility/: test-windows.ps1
compiler/daml-lf-ast/src/DA/Daml/LF/Ast/: Pretty.hs
compiler/daml-lf-tools/src/DA/Daml/LF/: Simplifier.hs
compiler/damlc/: BUILD.bazel
compiler/damlc/daml-ide-core/src/Development/IDE/Core/Rules/: Daml.hs
daml-assistant/integration-tests/src/DA/Daml/Assistant/: IntegrationTests.hs
daml-lf/engine/src/main/scala/com/digitalasset/daml/lf/engine/: Engine.scala
daml-lf/interpreter/src/main/scala/com/digitalasset/daml/lf/speedy/: Classify.scala  Compiler.scala  PrettyLightweight.scala  SBuiltin.scala  SExpr.scala  Speedy.scala
daml-lf/interpreter/src/main/scala/com/digitalasset/daml/lf/transaction/: PartialTransaction.scala
daml-lf/interpreter/src/test/scala/com/digitalasset/daml/lf/speedy/svalue/: OrderingSpec.scala
daml-lf/language/src/main/scala/com/digitalasset/daml/lf/language/: Ast.scala
daml-lf/repl/: BUILD.bazel
daml-lf/repl/src/perf/benches/scala/com/digitalasset/daml/lf/repl/testing/: CollectAuthority.scala
daml-lf/repl/src/perf/resources/damls/: CollectAuthority.daml
daml-lf/scenario-interpreter/: BUILD.bazel
daml-lf/transaction/src/main/scala/com/digitalasset/daml/lf/transaction/: Transaction.scala
daml-lf/validation/src/test/scala/com/digitalasset/daml/lf/validation/: TypingSpec.scala
language-support/ts/codegen/src/: TsCodeGenMain.hs
ledger/sandbox/src/main/scala/com/digitalasset/platform/store/dao/: HikariJdbcConnectionProvider.scala  JdbcLedgerDao.scala
ledger/sandbox/src/main/scala/com/digitalasset/platform/store/dao/events/: EventsTableFlatEventsRangeQueries.scala  EventsTableInsert.scala  TransactionsReader.scala  (+1 more)
nix/: default.nix
release/: artifacts.yaml
triggers/service/: daml-platform.sh
(+6 files in other folders)
