# Copyright (c) 2020 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load(
    "//bazel_tools:scala.bzl",
    "da_scala_benchmark_jmh",
    "da_scala_binary",
)
load(
    "//rules_daml:daml.bzl",
    "daml_compile",
)

da_scala_binary(
    name = "repl",
    srcs = glob(["src/main/**/*.scala"]),
    main_class = "com.daml.lf.speedy.testing.Main",
    tags = ["maven_coordinates=com.daml:daml-lf-repl:__VERSION__"],
    visibility = ["//visibility:public"],
    deps = [
        "//daml-lf/archive:daml_lf_archive_reader",
        "//daml-lf/archive:daml_lf_dev_archive_java_proto",
        "//daml-lf/data",
        "//daml-lf/interpreter",
        "//daml-lf/language",
        "//daml-lf/parser",
        "//daml-lf/scenario-interpreter",
        "//daml-lf/transaction",
        "//daml-lf/validation",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:org_jline_jline",
        "@maven//:org_typelevel_paiges_core_2_12",
    ],
)

daml_compile(
    name = "CollectAuthority",
    srcs = ["src/perf/resources/damls/CollectAuthority.daml"],
    visibility = ["//visibility:public"],
)

da_scala_benchmark_jmh(
    name = "scenario-perf",
    data = [
        ":CollectAuthority.dar",
    ],
    srcs = glob(["src/perf/benches/**/*.scala"]),
    visibility = ["//visibility:public"],
    deps = [
        "//bazel_tools/runfiles:scala_runfiles",
        "//daml-lf/archive:daml_lf_archive_reader",
        "//daml-lf/archive:daml_lf_dev_archive_java_proto",
        "//daml-lf/data",
        "//daml-lf/interpreter",
        "//daml-lf/language",
        "//daml-lf/scenario-interpreter",
        "//daml-lf/transaction",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:org_typelevel_paiges_core_2_12",
    ],
)
